--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     depends_on:
       - mongo
     volumes:
-      - ".:/usr/src/app"
+      - "./work:/usr/src/app" # the whole app and package.json is mounted here.
+      # - ".:/usr/src/app"
       # Don't sync the node_modules directory back to the client.
       - "/usr/src/app/node_modules"
   mongo:
