--- a/work/package.json
+++ b/work/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.10.8",
     "method-override": "^2.3.10",
     "mongoose": "5.7.5",
